fix spacing

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1358,8 +1358,8 @@ a {
   }
 }
 .cid-vlAb08CuuF {
-  padding-top: 3rem;
-  padding-bottom: 3rem;
+  padding-top: 0rem;
+  padding-bottom: 1rem;
   background-color: #59ce00;
 }
 .cid-vlAb08CuuF .mbr-fallback-image.disabled {
@@ -1377,18 +1377,15 @@ a {
 .cid-vlAb08CuuF .mbr-section-title {
   color: #163300;
 }
-.cid-vp52NDi2pv {
-  padding-top: 3rem;
-  padding-bottom: 1rem;
-  background-color: #ffffff;
+.cid-vp540uMVGY {
+  padding-top: 4rem;
+  padding-bottom: 3rem;
+  background-color: #59ce00;
 }
-.cid-vp52NDi2pv .justify-content-center {
-  align-items: center;
-}
-.cid-vp52NDi2pv .mbr-fallback-image.disabled {
+.cid-vp540uMVGY .mbr-fallback-image.disabled {
   display: none;
 }
-.cid-vp52NDi2pv .mbr-fallback-image {
+.cid-vp540uMVGY .mbr-fallback-image {
   display: block;
   background-size: cover;
   background-position: center center;
@@ -1397,35 +1394,28 @@ a {
   position: absolute;
   top: 0;
 }
-.cid-vp52NDi2pv .item-wrapper {
-  display: flex;
-  margin-bottom: 2rem;
-  align-items: center;
+.cid-vp540uMVGY .mbr-section-title {
+  color: #163300;
 }
-@media (max-width: 767px) {
-  .cid-vp52NDi2pv .item-wrapper {
-    margin-bottom: 1rem;
-  }
-}
-.cid-vp52NDi2pv .iconfont-wrapper {
-  padding-right: 1.5rem;
-}
-.cid-vp52NDi2pv .content-head {
-  max-width: 800px;
-}
-.cid-vp52NDi2pv .mbr-iconfont {
-  display: inline-flex;
-  font-size: 2rem;
-  color: #ffffff;
-  width: 80px;
-  justify-content: center;
-  align-items: center;
-  background: #ffffff;
-  height: 80px;
-  border-radius: 50%;
-}
-.cid-vp52NDi2pv .card-title {
+.cid-vp540uMVGY .mbr-section-subtitle {
   text-align: center;
+}
+.cid-vp54JPuj21 {
+  padding-top: 4rem;
+  padding-bottom: 0rem;
+  background-color: #ffffff;
+}
+.cid-vp54JPuj21 .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-vp54JPuj21 .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
 }
 .cid-vlAc3aQcBn {
   padding-top: 8rem;
@@ -2193,14 +2183,31 @@ a {
   }
 }
 .cid-vlLBw6tX6o {
-  padding-top: 6rem;
-  padding-bottom: 6rem;
+  padding-top: 0rem;
+  padding-bottom: 0rem;
   background-color: #ffffff;
 }
 .cid-vlLBw6tX6o .mbr-fallback-image.disabled {
   display: none;
 }
 .cid-vlLBw6tX6o .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+.cid-vp55d9Wc5M {
+  padding-top: 3rem;
+  padding-bottom: 6rem;
+  background-color: #ffffff;
+}
+.cid-vp55d9Wc5M .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-vp55d9Wc5M .mbr-fallback-image {
   display: block;
   background-size: cover;
   background-position: center center;
